linearity check with fit

--- a/notebooks/Calc_ensemble.ipynb
+++ b/notebooks/Calc_ensemble.ipynb
@@ -608,7 +608,159 @@
       "quad 245 CMCC-ESM2      SICO_ILTS   0.084  0.589\n",
       "quad 245 CanESM5        CISM_NCA    0.059  0.243\n",
       "quad 245 CanESM5        FETI_ULB    0.087  0.671\n",
-      "quad 245 CanESM5        GRIS_LSC    0.049  0.226\n"
+      "quad 245 CanESM5        GRIS_LSC    0.049  0.226\n",
+      "quad 245 CanESM5        IMAU_UU     0.166  0.743\n",
+      "quad 245 CanESM5        ISSM_UCI    0.173  0.429\n",
+      "quad 245 CanESM5        MALI_DOE    0.101  0.367\n",
+      "quad 245 CanESM5        PISM_DMI    0.211  4.782\n",
+      "quad 245 CanESM5        PISM_PIK    0.143  1.358\n",
+      "quad 245 CanESM5        SICO_ILTS   0.175  1.030\n",
+      "quad 245 EC-Earth3      CISM_NCA    0.109  0.516\n",
+      "quad 245 EC-Earth3      FETI_ULB    0.169  1.442\n",
+      "quad 245 EC-Earth3      GRIS_LSC    0.076  0.840\n",
+      "quad 245 EC-Earth3      IMAU_UU     0.335  1.834\n",
+      "quad 245 EC-Earth3      ISSM_UCI    0.314  0.873\n",
+      "quad 245 EC-Earth3      MALI_DOE    0.181  0.806\n",
+      "quad 245 EC-Earth3      PISM_DMI    0.356  8.666\n",
+      "quad 245 EC-Earth3      PISM_PIK    0.226  2.543\n",
+      "quad 245 EC-Earth3      SICO_ILTS   0.331  2.461\n",
+      "quad 245 EC-Earth3-Veg  CISM_NCA    0.030  0.125\n",
+      "quad 245 EC-Earth3-Veg  FETI_ULB    0.010  0.454\n",
+      "quad 245 EC-Earth3-Veg  GRIS_LSC   -0.010  0.183\n",
+      "quad 245 EC-Earth3-Veg  IMAU_UU     0.120  0.680\n",
+      "quad 245 EC-Earth3-Veg  ISSM_UCI    0.111  0.320\n",
+      "quad 245 EC-Earth3-Veg  MALI_DOE    0.048  0.153\n",
+      "quad 245 EC-Earth3-Veg  PISM_DMI    0.143  0.432\n",
+      "quad 245 EC-Earth3-Veg  PISM_PIK    0.018  2.042\n",
+      "quad 245 EC-Earth3-Veg  SICO_ILTS   0.029  0.059\n",
+      "quad 245 GFDL-ESM4      CISM_NCA   -0.033 -0.068\n",
+      "quad 245 GFDL-ESM4      FETI_ULB   -0.041 -0.067\n",
+      "quad 245 GFDL-ESM4      GRIS_LSC   -0.025  0.033\n",
+      "quad 245 GFDL-ESM4      IMAU_UU    -0.090 -0.228\n",
+      "quad 245 GFDL-ESM4      ISSM_UCI   -0.094 -0.180\n",
+      "quad 245 GFDL-ESM4      MALI_DOE   -0.051 -0.123\n",
+      "quad 245 GFDL-ESM4      PISM_DMI   -0.098 -0.091\n",
+      "quad 245 GFDL-ESM4      PISM_PIK   -0.043  0.217\n",
+      "quad 245 GFDL-ESM4      SICO_ILTS  -0.115 -0.309\n",
+      "quad 245 INM-CM4-8      CISM_NCA    0.054  0.209\n",
+      "quad 245 INM-CM4-8      FETI_ULB    0.086  0.566\n",
+      "quad 245 INM-CM4-8      GRIS_LSC    0.042  0.207\n",
+      "quad 245 INM-CM4-8      IMAU_UU     0.162  0.689\n",
+      "quad 245 INM-CM4-8      ISSM_UCI    0.155  0.406\n",
+      "quad 245 INM-CM4-8      MALI_DOE    0.089  0.341\n",
+      "quad 245 INM-CM4-8      PISM_DMI    0.181  3.224\n",
+      "quad 245 INM-CM4-8      PISM_PIK    0.115  1.071\n",
+      "quad 245 INM-CM4-8      SICO_ILTS   0.184  1.008\n",
+      "quad 245 INM-CM5-0      CISM_NCA    0.010  0.035\n",
+      "quad 245 INM-CM5-0      FETI_ULB    0.016  0.102\n",
+      "quad 245 INM-CM5-0      GRIS_LSC    0.008  0.062\n",
+      "quad 245 INM-CM5-0      IMAU_UU     0.022  0.104\n",
+      "quad 245 INM-CM5-0      ISSM_UCI    0.016  0.066\n",
+      "quad 245 INM-CM5-0      MALI_DOE    0.004  0.037\n",
+      "quad 245 INM-CM5-0      PISM_DMI    0.024  0.274\n",
+      "quad 245 INM-CM5-0      PISM_PIK    0.019  0.173\n",
+      "quad 245 INM-CM5-0      SICO_ILTS   0.034  0.124\n",
+      "quad 245 MIROC6         CISM_NCA    0.040  0.195\n",
+      "quad 245 MIROC6         FETI_ULB    0.069  0.504\n",
+      "quad 245 MIROC6         GRIS_LSC    0.028  0.199\n",
+      "quad 245 MIROC6         IMAU_UU     0.110  0.551\n",
+      "quad 245 MIROC6         ISSM_UCI    0.101  0.334\n",
+      "quad 245 MIROC6         MALI_DOE    0.054  0.254\n",
+      "quad 245 MIROC6         PISM_DMI    0.129  2.738\n",
+      "quad 245 MIROC6         PISM_PIK    0.091  0.906\n",
+      "quad 245 MIROC6         SICO_ILTS   0.134  0.720\n",
+      "quad 245 MPI-ESM1-2-LR  CISM_NCA    0.040  0.127\n",
+      "quad 245 MPI-ESM1-2-LR  FETI_ULB    0.050  0.343\n",
+      "quad 245 MPI-ESM1-2-LR  GRIS_LSC    0.023  0.175\n",
+      "quad 245 MPI-ESM1-2-LR  IMAU_UU     0.120  0.418\n",
+      "quad 245 MPI-ESM1-2-LR  ISSM_UCI    0.118  0.252\n",
+      "quad 245 MPI-ESM1-2-LR  MALI_DOE    0.070  0.192\n",
+      "quad 245 MPI-ESM1-2-LR  PISM_DMI    0.158  2.232\n",
+      "quad 245 MPI-ESM1-2-LR  PISM_PIK    0.084  0.878\n",
+      "quad 245 MPI-ESM1-2-LR  SICO_ILTS   0.103  0.453\n",
+      "quad 245 MRI-ESM2-0     CISM_NCA    0.023  0.070\n",
+      "quad 245 MRI-ESM2-0     FETI_ULB    0.035  0.167\n",
+      "quad 245 MRI-ESM2-0     GRIS_LSC    0.014  0.066\n",
+      "quad 245 MRI-ESM2-0     IMAU_UU     0.073  0.235\n",
+      "quad 245 MRI-ESM2-0     ISSM_UCI    0.064  0.134\n",
+      "quad 245 MRI-ESM2-0     MALI_DOE    0.039  0.106\n",
+      "quad 245 MRI-ESM2-0     PISM_DMI    0.067  0.700\n",
+      "quad 245 MRI-ESM2-0     PISM_PIK    0.052  0.271\n",
+      "quad 245 MRI-ESM2-0     SICO_ILTS   0.066  0.279\n",
+      "quad 245 NorESM2-MM     CISM_NCA    0.011  0.081\n",
+      "quad 245 NorESM2-MM     FETI_ULB    0.009  0.290\n",
+      "quad 245 NorESM2-MM     GRIS_LSC   -0.019  0.151\n",
+      "quad 245 NorESM2-MM     IMAU_UU     0.023  0.233\n",
+      "quad 245 NorESM2-MM     ISSM_UCI   -0.007  0.104\n",
+      "quad 245 NorESM2-MM     MALI_DOE   -0.001  0.052\n",
+      "quad 245 NorESM2-MM     PISM_DMI    0.003  0.460\n",
+      "quad 245 NorESM2-MM     PISM_PIK    0.020  0.777\n",
+      "quad 245 NorESM2-MM     SICO_ILTS   0.016  0.137\n",
+      "quad 585 ACCESS-CM2     CISM_NCA    0.059  0.142\n",
+      "quad 585 ACCESS-CM2     FETI_ULB    0.075  0.299\n",
+      "quad 585 ACCESS-CM2     GRIS_LSC    0.010  0.070\n",
+      "quad 585 ACCESS-CM2     IMAU_UU     0.207  0.698\n",
+      "quad 585 ACCESS-CM2     ISSM_UCI    0.187  0.348\n",
+      "quad 585 ACCESS-CM2     MALI_DOE    0.098  0.225\n",
+      "quad 585 ACCESS-CM2     PISM_DMI    0.193  1.644\n",
+      "quad 585 ACCESS-CM2     PISM_PIK    0.078  0.229\n",
+      "quad 585 ACCESS-CM2     SICO_ILTS   0.160  0.508\n",
+      "quad 585 CAMS-CSM1-0    CISM_NCA    0.046  0.118\n",
+      "quad 585 CAMS-CSM1-0    FETI_ULB    0.061  0.260\n",
+      "quad 585 CAMS-CSM1-0    GRIS_LSC    0.014  0.135\n",
+      "quad 585 CAMS-CSM1-0    IMAU_UU     0.158  0.549\n",
+      "quad 585 CAMS-CSM1-0    ISSM_UCI    0.145  0.284\n",
+      "quad 585 CAMS-CSM1-0    MALI_DOE    0.075  0.194\n",
+      "quad 585 CAMS-CSM1-0    PISM_DMI    0.139  1.186\n",
+      "quad 585 CAMS-CSM1-0    PISM_PIK    0.063  0.360\n",
+      "quad 585 CAMS-CSM1-0    SICO_ILTS   0.134  0.476\n",
+      "quad 585 CAS-ESM2-0     CISM_NCA    0.149  1.269\n",
+      "quad 585 CAS-ESM2-0     FETI_ULB    0.219  3.020\n",
+      "quad 585 CAS-ESM2-0     GRIS_LSC    0.124  0.746\n",
+      "quad 585 CAS-ESM2-0     IMAU_UU     0.314  2.913\n",
+      "quad 585 CAS-ESM2-0     ISSM_UCI    0.306  1.744\n",
+      "quad 585 CAS-ESM2-0     MALI_DOE    0.174  1.449\n",
+      "quad 585 CAS-ESM2-0     PISM_DMI    0.367  10.157\n",
+      "quad 585 CAS-ESM2-0     PISM_PIK    0.358  6.402\n",
+      "quad 585 CAS-ESM2-0     SICO_ILTS   0.409  3.673\n",
+      "quad 585 CMCC-ESM2      CISM_NCA    0.036  0.180\n",
+      "quad 585 CMCC-ESM2      FETI_ULB    0.040  0.448\n",
+      "quad 585 CMCC-ESM2      GRIS_LSC    0.027  0.146\n",
+      "quad 585 CMCC-ESM2      IMAU_UU     0.088  0.501\n",
+      "quad 585 CMCC-ESM2      ISSM_UCI    0.090  0.273\n",
+      "quad 585 CMCC-ESM2      MALI_DOE    0.051  0.209\n",
+      "quad 585 CMCC-ESM2      PISM_DMI    0.116  1.738\n",
+      "quad 585 CMCC-ESM2      PISM_PIK    0.089  2.306\n",
+      "quad 585 CMCC-ESM2      SICO_ILTS   0.066  0.425\n",
+      "quad 585 CanESM5        CISM_NCA    0.070  0.298\n",
+      "quad 585 CanESM5        FETI_ULB    0.099  0.817\n",
+      "quad 585 CanESM5        GRIS_LSC    0.055  0.164\n",
+      "quad 585 CanESM5        IMAU_UU     0.186  0.872\n",
+      "quad 585 CanESM5        ISSM_UCI    0.191  0.500\n",
+      "quad 585 CanESM5        MALI_DOE    0.112  0.428\n",
+      "quad 585 CanESM5        PISM_DMI    0.232  4.477\n",
+      "quad 585 CanESM5        PISM_PIK    0.169  1.652\n",
+      "quad 585 CanESM5        SICO_ILTS   0.194  1.147\n",
+      "quad 585 EC-Earth3      CISM_NCA    0.144  0.847\n",
+      "quad 585 EC-Earth3      FETI_ULB    0.204  2.022\n",
+      "quad 585 EC-Earth3      GRIS_LSC    0.094  0.643\n",
+      "quad 585 EC-Earth3      IMAU_UU     0.412  2.502\n",
+      "quad 585 EC-Earth3      ISSM_UCI    0.382  1.294\n",
+      "quad 585 EC-Earth3      MALI_DOE    0.212  1.109\n",
+      "quad 585 EC-Earth3      PISM_DMI    0.438  15.997\n",
+      "quad 585 EC-Earth3      PISM_PIK    0.312  4.379\n",
+      "quad 585 EC-Earth3      SICO_ILTS   0.393  2.965\n",
+      "quad 585 EC-Earth3-Veg  CISM_NCA    0.067  0.390\n",
+      "quad 585 EC-Earth3-Veg  FETI_ULB    0.055  0.818\n",
+      "quad 585 EC-Earth3-Veg  GRIS_LSC    0.019  0.196\n",
+      "quad 585 EC-Earth3-Veg  IMAU_UU     0.208  1.277\n",
+      "quad 585 EC-Earth3-Veg  ISSM_UCI    0.191  0.700\n",
+      "quad 585 EC-Earth3-Veg  MALI_DOE    0.087  0.420\n",
+      "quad 585 EC-Earth3-Veg  PISM_DMI    0.223  0.627\n",
+      "quad 585 EC-Earth3-Veg  PISM_PIK    0.105  2.248\n",
+      "quad 585 EC-Earth3-Veg  SICO_ILTS   0.106  0.642\n",
+      "quad 585 GFDL-ESM4      CISM_NCA   -0.027 -0.051\n",
+      "quad 585 GFDL-ESM4      FETI_ULB   -0.035 -0.038\n"
      ]
     }
    ],
