update tot2 timeseries and figs

--- a/notebooks/Calc_ensemble.ipynb
+++ b/notebooks/Calc_ensemble.ipynb
@@ -71,7 +71,7 @@
     "                TMP,IML,SLR = ut.iterate(ds,ism=ii,esm=es,ssp=ss,bmp=bmp)\n",
     "                slr_nf[s,e,i,:] = np.sum(SLR[0,:,:],axis=1)\n",
     "                slr_wf[s,e,i,:] = np.sum(SLR[-1,:,:],axis=1)\n",
-    "                print(f'{bmp:4s}',ss,f'{es:14s}',f'{ii:10s}',f'{slr_nf[s,e,i,-1]: .3f}',f'{slr_wf[s,e,i,-1]: .3f}')       \n",
+    "                print(f'{bmp:4s}',ss,f'{es:14s}',f'{ii:10s}',f'{slr_nf[s,e,i,-1]: .3f}',f'{slr_wf[s,e,i,-1]: .3f}',f'{(slr_wf[s,e,i,-1]-slr_nf[s,e,i,-1]): .3f}',f'{slr_wf[s,e,i,-1]/slr_nf[s,e,i,-1]: .1f}')       \n",
     "    #Save\n",
     "    slr_nf2 = xr.DataArray(slr_nf,dims=('ssp','esm','ism','time'),coords={'ssp':ds.ssp,'esm':ds.esm,'ism':ds.ism,'time':ds.time},attrs={'unit':'m','long_name':'Cumulative sea level rise without feedback'})\n",
     "    slr_wf2 = xr.DataArray(slr_wf,dims=('ssp','esm','ism','time'),coords={'ssp':ds.ssp,'esm':ds.esm,'ism':ds.ism,'time':ds.time},attrs={'unit':'m','long_name':'Cumulative sea level rise with feedback'})\n",
