--- a/notebooks/Klooi_fit_ORF.ipynb
+++ b/notebooks/Klooi_fit_ORF.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "#Magnitude and time scale of response \n",
     "\n",
-    "mag = [1.2,2,.7,1,1] #degC\n",
+    "mag = [1,1,.5,.8,1] #degC\n",
     "tsc = [60,50,100,60,50] #year\n",
     "\n",
     "faclo = .1\n",
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fitctrl=True"
+    "fitctrl=False"
    ]
   },
   {
