--- a/notebooks/Read_alldata.ipynb
+++ b/notebooks/Read_alldata.ipynb
@@ -31,11 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#year0 = 1951\n",
-    "year0 = 1851\n",
+    "year0 = 1951\n",
+    "#year0 = 1851\n",
     "\n",
-    "#option = ''\n",
-    "option = '_fit'"
+    "option = ''\n",
+    "#option = '_fit'"
    ]
   },
   {
@@ -198,8 +198,9 @@
     "\n",
     "#Magnitude and time scale of response \n",
     "\n",
-    "mag = [1.2,2,.7,1,1] #degC\n",
-    "tsc = [60,50,100,30,50] #year\n",
+    "mag = [1,1,.5,.8,1] #degC\n",
+    "tsc = [60,50,100,60,50] #year\n",
+    "\n",
     "faclo = .1\n",
     "fachi = .6\n",
     "\n",
