partial rewrite to object oriented. Also first messy attempt at calibration

--- a/notebooks/Draftplot_linearitycheck.ipynb
+++ b/notebooks/Draftplot_linearitycheck.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c13ab84-8e46-455b-8419-9931d2e2a685",
+   "id": "e671a4b1-df65-4495-9fb5-edd493807701",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,22 +25,31 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import sys\n",
-    "\n",
     "sys.path.append('../src')\n",
-    "import utils as ut"
+    "import utils as ut\n",
+    "\n",
+    "from alldata import AllData\n",
+    "from ensemble import EnsembleMember\n",
+    "\n",
+    "#np.set_printoptions(precision=2)\n",
+    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.print_figure_kwargs={'bbox_inches':None}\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83d66f42-4da4-40dc-905d-bf0ad3b1ad45",
+   "id": "fb2503fb-c4d5-495b-824d-14aefa1a3d75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "option = ''\n",
-    "#option = '_fit'\n",
-    "\n",
-    "ds = xr.open_dataset(f'../data/alldata{option}_1951_2100.nc')"
+    "#Read data\n",
+    "ad = AllData()\n",
+    "ad.option='_lin'\n",
+    "ds = ad.gather()"
    ]
   },
   {
@@ -50,15 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpl.rcParams['lines.linewidth'] = 2.\n",
+    "mpl.rcParams['lines.linewidth'] = 1.\n",
     "mpl.rcParams['figure.subplot.wspace'] = .1\n",
     "mpl.rcParams['figure.subplot.left'] = .15\n",
     "mpl.rcParams['figure.subplot.right'] = .99\n",
     "mpl.rcParams['figure.subplot.bottom'] = .1\n",
     "mpl.rcParams['figure.subplot.top'] = .95\n",
-    "mpl.rcParams['figure.figsize'] = (7,4)\n",
-    "\n",
-    "basinname = ['East Ant.','Ross','Amundsen','Weddell','Peninsula']"
+    "mpl.rcParams['figure.figsize'] = (7,4)"
    ]
   },
   {
@@ -70,12 +77,15 @@
    "source": [
     "fig,ax = plt.subplots(5,4,sharex=True,sharey=True)\n",
     "for b,bas in enumerate(ds.basin.values):\n",
+    "    for i in range(4):\n",
+    "        ax[b,i].axhline(0,0,1,c='.5',ls=':')\n",
+    "    \n",
     "    ax[b,0].plot(ds.rftime,ds.tanom[:,5,b],c=ut.bcol[bas])\n",
     "    ax[b,1].plot(ds.rftime,np.sum(ds.tanom[:,:5,b],axis=1),c=ut.bcol[bas])\n",
     "    ax[b,2].plot(ds.rftime,2*ds.tanom[:,6,b],c=ut.bcol[bas])\n",
     "    ax[b,3].plot(ds.rftime,.5*ds.tanom[:,7,b],c=ut.bcol[bas])\n",
     "\n",
-    "    ax[b,0].set_ylabel(basinname[b])\n",
+    "    ax[b,0].set_ylabel(bas)\n",
     "ax[0,0].set_title('TOTL')\n",
     "ax[0,1].set_title('sum of 5')\n",
     "ax[0,2].set_title('HALF * 2')\n",
@@ -83,7 +93,7 @@
     "fig.supxlabel('time [years]',fontsize=9)\n",
     "fig.supylabel('Ocean temperature response [degC]',fontsize=9)\n",
     "\n",
-    "plt.savefig(f'../draftfigs/linearitycheck{option}.png',dpi=450)\n",
+    "plt.savefig(f'../draftfigs/linearitycheck{ad.option}.png',dpi=450)\n",
     "plt.show()"
    ]
   },
