--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -2,24 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4a9f64c-1bdb-40ba-ab96-26347a191b0c",
+   "id": "26b6cfdc-0a1b-4168-95f6-65247c7df1b3",
    "metadata": {},
    "source": [
-    "Plot time series of temperature, mass loss, and sea level rise for a single ensemble member\n",
+    "This file needs requires external data!\n",
     "\n",
-    "SSP: 245\n",
-    "ESM: EC-Earth 3\n",
-    "ISM: CISM_NCA\n",
-    "\n",
-    "Plot iterations, highlighting first and last\n",
-    "\n",
-    "Plot T, ML, SLR for each basin and Antarctic-wide (6x3 plots)"
+    "(Run on workstation)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9253e199-1084-4a78-ae36-f7caa08b57c8",
+   "id": "071cf1c5-7d58-4e10-bce6-958b974e49cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,38 +24,56 @@
     "\n",
     "import sys\n",
     "sys.path.append('../src')\n",
-    "import utils as ut"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e362d7be-609b-4c5f-bac0-3e20392aa29e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#year0,year1 = 1851,2000\n",
-    "year0,year1 = 1951,2100\n",
+    "import utils as ut\n",
     "\n",
-    "option = ''\n",
-    "#option = '_fit'"
+    "from alldata import AllData\n",
+    "from ensemble import EnsembleMember\n",
+    "\n",
+    "#np.set_printoptions(precision=2)\n",
+    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.print_figure_kwargs={'bbox_inches':None}\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775d78a9-63f1-4f6d-a8bc-316741248073",
+   "id": "b590cfa7-1d34-440e-8578-74b61ffbce94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(f'../data/alldata{option}_{year0}_{year1}.nc')\n",
-    "ds = ds.isel(exp=slice(0,5))"
+    "#Choose starting year\n",
+    "year0 = 1951\n",
+    "#year0 = 1871\n",
+    "\n",
+    "#Choose ensemble member\n",
+    "ism = 'CISM_NCA'\n",
+    "esm = 'EC-Earth3'\n",
+    "ssp = '245'\n",
+    "\n",
+    "#Choose basal melt parameterisation\n",
+    "bmp = 'lin'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "716fceb4-2459-4590-9dff-ca8fc86d4b4d",
+   "id": "1bbc0e3c-b540-41d1-af26-7a5f6febec77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read data\n",
+    "ad = AllData()\n",
+    "ad.year0 = year0\n",
+    "ds = ad.gather()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7d67404-034d-467a-9cd1-6cbc87b08ebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,17 +86,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "024eca60-c61a-41a3-98b0-37618282dba2",
+   "id": "57eb6305-d953-41c9-b190-b9c67a3e5496",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TMP,IML,SLR = ut.iterate(ds,ism=ism,esm=esm,ssp=ssp,bmp=bmp)"
+    "ens = EnsembleMember(ds,ism=ism,esm=esm,ssp=ssp)\n",
+    "ens.niter=1\n",
+    "ens.iterate()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7cc9d26-0467-439c-a449-f6b89e1e4471",
+   "id": "ad069e09-9787-4b25-be47-88d81fd48b84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,27 +111,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb942381-052b-495b-9b13-d4a12d71e733",
+   "id": "1eff8ef6-ad2d-4456-b805-8c56bffc1b25",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig,ax = plt.subplots(3,5,sharex=True,sharey='row')\n",
     "\n",
-    "for b,bas in enumerate(ds.basin.values):\n",
-    "    for v,var in enumerate([TMP,np.cumsum(IML,axis=1),100*SLR]):\n",
+    "for b,bas in enumerate(ens.basin.values):\n",
+    "    for v,var in enumerate([ens.TMP,.001*np.cumsum(ens.IML,axis=1),100*ens.SLR]):\n",
     "        dax = ax[v,b]\n",
     "        dax.plot(ds.time,var[0,:,b],c='.5')\n",
-    "        for n in range(1,TMP.shape[0]):\n",
+    "        for n in range(1,ens.TMP.shape[0]):\n",
     "            dax.plot(ds.time,var[n,:,b],c=ut.bcol[bas])\n",
     "        dax.text(.1,.8,f\"{100*((var[-1,-1,b]-var[-1,0,b])-(var[0,-1,b]-var[0,0,b]))/np.abs(var[0,-1,b]-var[0,0,b]):+.0f}%\",transform=dax.transAxes,weight='bold',c=ut.bcol[bas])\n",
     "        \n",
     "    ax[0,b].set_title(bas)\n",
     "ax[-1,2].set_xlabel('Time [years]')\n",
     "ax[0,0].set_ylabel('Temperature [degC]')\n",
-    "ax[1,0].set_ylabel('Cumulative ice mass loss [Gt]')\n",
+    "ax[1,0].set_ylabel('Cumulative ice mass loss \\n [1000 Gt]')\n",
     "ax[2,0].set_ylabel('Sea level rise [cm]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/single_ensemble{option}.png',dpi=450,facecolor='w',transparent=False)\n",
+    "plt.savefig(f'../draftfigs/single_ensemble_{ad.year0}{ad.option}.png',dpi=450,facecolor='w',transparent=False)\n",
     "plt.show()\n",
     "ds.close()"
    ]
@@ -125,40 +139,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a165cb7-f4c5-41c1-a970-59477e66005d",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
+   "id": "3c6b3a02-0e68-4b35-a2db-b01ae422a231",
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "fig,ax = plt.subplots(3,5,sharex=True,sharey='row')\n",
-    "\n",
-    "for b,bas in enumerate(ds.basin.values):\n",
-    "    for v,var in enumerate([TMP,np.cumsum(IML,axis=1),SLR]):\n",
-    "        dax = ax[v,b]\n",
-    "        dax.plot(ds.time,var[0,:,b],c='.5')\n",
-    "        #for n in range(1,TMP.shape[0]):\n",
-    "        #    dax.plot(ds.time,var[n,:,b],c=ut.bcol[bas])\n",
-    "        #dax.text(.1,.8,f\"{100*((var[-1,-1,b]-var[-1,0,b])-(var[0,-1,b]-var[0,0,b]))/np.abs(var[0,-1,b]-var[0,0,b]):+.0f}%\",transform=dax.transAxes,weight='bold',c=ut.bcol[bas])\n",
-    "        \n",
-    "    ax[0,b].set_title(bas)\n",
-    "ax[-1,2].set_xlabel('Time [years]')\n",
-    "ax[0,0].set_ylabel('Temperature [degC]')\n",
-    "ax[1,0].set_ylabel('Cumulative ice mass loss [Gt]')\n",
-    "ax[2,0].set_ylabel('Sea level rise [m]')\n",
-    "\n",
-    "plt.savefig(f'../draftfigs/single_ensemble_nofeedback.png',dpi=450,facecolor='w',transparent=False)\n",
-    "plt.show()\n",
-    "ds.close()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183972bb-9c6e-4e08-8195-0aead3e439ae",
+   "id": "7dd15fdf-d754-41d2-b599-7c420ebf8162",
    "metadata": {},
    "outputs": [],
    "source": []
