--- a/notebooks/Plot_perturbations.ipynb
+++ b/notebooks/Plot_perturbations.ipynb
@@ -15,7 +15,16 @@
     "import sys\n",
     "\n",
     "sys.path.append('../src')\n",
-    "import utils as ut"
+    "import utils as ut\n",
+    "\n",
+    "from rundata import RunData\n",
+    "\n",
+    "#np.set_printoptions(precision=2)\n",
+    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.print_figure_kwargs={'bbox_inches':None}\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -26,43 +35,19 @@
    "outputs": [],
    "source": [
     "#runs = ['ctrl','half','hal2','totl','tot2']\n",
-    "runs = ['ctrl','hal2','tot2']"
+    "runs = ['ctrl','tot2','amun']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a15d7f-2804-4a63-9a40-a848db877898",
+   "id": "f8917eb3-930e-4763-89ed-eb544bf59bba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = {}\n",
-    "cols['ctrl'] = '.5'\n",
-    "cols['quar'] = ut.scol['119']\n",
-    "cols['half'] = ut.scol['126']\n",
-    "cols['hal2'] = ut.scol['126']\n",
-    "cols['totl'] = ut.scol['245']\n",
-    "cols['tot2'] = ut.scol['245']\n",
-    "cols['doub'] = ut.scol['585']\n",
-    "\n",
-    "\n",
-    "lss = {}\n",
-    "lss['ctrl'] = '-'\n",
-    "lss['quar'] = '-'\n",
-    "lss['half'] = '-'\n",
-    "lss['hal2'] = '-'\n",
-    "lss['totl'] = '-'\n",
-    "lss['tot2'] = '-'\n",
-    "lss['doub'] = '-'\n",
-    "\n",
-    "lws = {}\n",
-    "lws['ctrl'] = .5\n",
-    "lws['quar'] = .5\n",
-    "lws['half'] = .5\n",
-    "lws['hal2'] = 1\n",
-    "lws['totl'] = .5\n",
-    "lws['tot2'] = 1\n",
-    "lws['doub'] = 1"
+    "for run in runs:\n",
+    "    rd = RunData(run)\n",
+    "    rd.checkfornewdata(option='mon')"
    ]
   },
   {
@@ -76,9 +61,9 @@
     "mpl.rcParams['figure.subplot.hspace'] = .05\n",
     "mpl.rcParams['figure.subplot.left'] = .1\n",
     "mpl.rcParams['figure.subplot.right'] = .9\n",
-    "mpl.rcParams['lines.linewidth'] = 1\n",
-    "mpl.rcParams['figure.figsize'] = (20,8)\n",
-    "mpl.rcParams['figure.subplot.bottom'] = .08\n"
+    "mpl.rcParams['lines.linewidth'] = 2.\n",
+    "mpl.rcParams['figure.figsize'] = (16,8)\n",
+    "mpl.rcParams['figure.subplot.bottom'] = .08"
    ]
   },
   {
@@ -88,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmax = 150*12\n",
+    "tmax = 50*12\n",
     "nbasins = 5 #5 or 7\n",
     "\n",
     "fig,ax = plt.subplots(3,nbasins,sharex=True,sharey='row')\n",
@@ -105,13 +90,13 @@
     "for r,run in enumerate(runs):\n",
     "    ds = xr.open_dataset(f'../data/temperature_mon_{run}.nc').isel(time=slice(0,tmax))\n",
     "    for b,bas in enumerate(ds.basin.values[:nbasins]):\n",
-    "        ax[0,b].plot(ds.time/12,ds.temp.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run],label=run)\n",
-    "        ax[1,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl.temp.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run])\n",
+    "        ax[0,b].plot(ds.time/12,ds.temp.sel(basin=bas),c=ut.rcol[run],label=run)\n",
+    "        ax[1,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl.temp.sel(basin=bas),c=ut.rcol[run])\n",
     "        if run != 'ctrl':\n",
-    "            ax[2,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl2.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run])\n",
+    "            ax[2,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl2.sel(basin=bas),c=ut.rcol[run])\n",
     "        else:\n",
-    "            ax[0,b].plot(ds.time/12,ctrl2.sel(basin=bas),c=cols[run],ls=lss[run],lw=lws[run])\n",
-    "        ax[2,b].axhline(0,0,1,c=cols['ctrl'],lw=lws['ctrl'],ls=lss['ctrl'])\n",
+    "            ax[0,b].plot(ds.time/12,ctrl2.sel(basin=bas),c=ut.rcol[run],lw=.5)\n",
+    "        ax[2,b].axhline(0,0,1,c=ut.rcol['ctrl'],lw=.5)\n",
     "        ax[0,b].set_title(bas,color=ut.bcol[bas],loc='left')\n",
     "    ds.close()\n",
     "    \n",
