--- a/notebooks/Video_subsurfacetemp.ipynb
+++ b/notebooks/Video_subsurfacetemp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a528c72f-4da5-4376-b714-7ec77127d363",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9ca68a47-307a-45ad-85cd-cd4665331846",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,13 @@
     "\n",
     "run  = 'tot2'  # New run to be compared to control\n",
     "jmax = 55      # Maximum j index for northern latitudinal extent\n",
-    "olev = 36      # Depth index, 34 = 300m, 36 = 370m"
+    "olev = 36      # Depth index, 34 = 300m, 36 = 370m\n",
+    "olevS = 23"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "48deb197-90c5-4b1c-a347-e7d66a723423",
    "metadata": {},
    "outputs": [],
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9d0fe34a-99b0-41ba-ab52-9d80f0e31264",
    "metadata": {},
    "outputs": [],
@@ -86,20 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dd6513f6-d963-469c-be79-a49240299e83",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "586 48 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "runs = np.append([run],'n011')\n",
     "\n",
@@ -120,45 +113,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "186293c3-7d9e-45aa-857f-83ccc8421107",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tot2 586 months = 48 y 10 m\n",
-      "n011 2400 months = 200 y 0 m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var = {}\n",
+    "varS = {}\n",
+    "\n",
     "for rn in runs:\n",
     "    fnames,nmon = get_fnames(rn)\n",
     "    if rn==run:\n",
     "        assert nmon==nmonths,'Need to run Read_ece_ts_oceantemp'\n",
-    "    var[rn] = np.zeros((nmonths,lon.shape[0],lon.shape[1]))\n",
+    "    var[rn]  = np.zeros((nmonths,lon.shape[0],lon.shape[1]))\n",
+    "    varS[rn] = np.zeros((nmonths,lon.shape[0],lon.shape[1]))\n",
     "    c = -1\n",
     "    for fname in fnames:\n",
     "        ds = xr.open_dataset(fname).isel(y=slice(0,jmax))\n",
+    "        if fname == fnames[0]:\n",
+    "            dep = ds['olevel'][olev].values\n",
+    "            depS = ds['olevel'][olevS].values\n",
     "        for t,tt in enumerate(ds['time_counter'].values):\n",
     "            c+=1\n",
     "            if c>=nmonths:\n",
     "                break\n",
-    "            var[rn][c,:,:] = ds['thetao'].isel(olevel=olev,time_counter=t)\n",
+    "            var[rn][c,:,:]  = ds['thetao'].isel(olevel=olev,time_counter=t)\n",
+    "            varS[rn][c,:,:] = ds['so'].isel(olevel=olevS,time_counter=t)\n",
     "        ds.close()\n",
     "        if c>=nmonths:\n",
     "            break\n",
-    "        "
+    "print(dep,depS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3f4a8029-9d95-405f-ae51-20b8082ef0b9",
    "metadata": {},
    "outputs": [],
@@ -167,7 +158,11 @@
     "vmin = -2\n",
     "vmax = 2\n",
     "\n",
-    "mpl.rcParams['figure.figsize'] = (10,5)\n",
+    "cmapS = 'cmo.balance'\n",
+    "vminS = -1\n",
+    "vmaxS = 1\n",
+    "\n",
+    "mpl.rcParams['figure.figsize'] = (15,5)\n",
     "mpl.rcParams['figure.subplot.wspace'] = .15\n",
     "mpl.rcParams['figure.subplot.hspace'] = .01\n",
     "mpl.rcParams['figure.subplot.left'] = .01\n",
@@ -180,20 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e30d641f-f1a7-40ee-908e-2469739a9fdf",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved 585 of 586 months\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Save frames\n",
     "\n",
@@ -205,9 +192,9 @@
     "for m in range(nmonths):\n",
     "    fig = plt.figure()\n",
     "        \n",
-    "    ax = fig.add_subplot(121,projection=ccrs.SouthPolarStereo())\n",
+    "    ax = fig.add_subplot(132,projection=ccrs.SouthPolarStereo())\n",
     "    ax.set_extent([-180, 180, -80, -59], crs=ccrs.PlateCarree())\n",
-    "    im = ax.scatter(lon,lat,5,c=var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
+    "    im = ax.scatter(lon,lat,5,c=var[run][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
     "    #im = ax.pcolormesh(lon[:,1:-1],lat[:,1:-1],var['tot2'][m,:,1:-1]-var['n011'][m,:,1:-1],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
     "    #im = ax.pcolormesh(lon,lat,var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
     "\n",
@@ -217,10 +204,25 @@
     "    axins = inset_axes(ax,width=\"5%\",height=\"100%\",loc='center right',borderpad=-2)\n",
     "    cb = fig.colorbar(im, cax=axins)\n",
     "    \n",
-    "    ax.set_title('Temperature anomaly at 370m depth [degC]')\n",
+    "    ax.set_title(f'Temperature anomaly at {dep:.0f}m depth [degC]')\n",
     "    ax.set_axis_off()\n",
     "    \n",
-    "    ax = fig.add_subplot(122)\n",
+    "    ax = fig.add_subplot(131,projection=ccrs.SouthPolarStereo())\n",
+    "    ax.set_extent([-180, 180, -80, -59], crs=ccrs.PlateCarree())\n",
+    "    im = ax.scatter(lon,lat,5,c=varS[run][m,:,:]-varS['n011'][m,:,:],cmap=cmapS,vmin=vminS,vmax=vmaxS,transform=ccrs.PlateCarree())\n",
+    "    #im = ax.pcolormesh(lon[:,1:-1],lat[:,1:-1],var['tot2'][m,:,1:-1]-var['n011'][m,:,1:-1],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
+    "    #im = ax.pcolormesh(lon,lat,var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
+    "\n",
+    "    ax.add_feature(cartopy.feature.LAND.with_scale('10m'),facecolor='.7')\n",
+    "    ax.coastlines(linewidth=0.4, zorder=2, resolution='10m')\n",
+    "        \n",
+    "    axins = inset_axes(ax,width=\"5%\",height=\"100%\",loc='center right',borderpad=-2)\n",
+    "    cb = fig.colorbar(im, cax=axins)\n",
+    "    \n",
+    "    ax.set_title(f'Salinity anomaly at {depS:.0f}m depth [degC]')\n",
+    "    ax.set_axis_off()   \n",
+    "\n",
+    "    ax = fig.add_subplot(133)\n",
     "    ax.axhline(0,0,1,color='.5',ls=':')\n",
     "    for b,bas in enumerate(basin):\n",
     "        ax.plot(time[:m+1],dtemp.sel(basin=bas)[:m+1],c=ut.bcol[bas])\n",
@@ -253,79 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9756b7e2-fe9d-481f-b20b-70d0d8fb3771",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ffmpeg version 4.3.2 Copyright (c) 2000-2021 the FFmpeg developers\n",
-      "  built with gcc 10 (GCC)\n",
-      "  configuration: --prefix=/usr --bindir=/usr/bin --datadir=/usr/share/ffmpeg --docdir=/usr/share/doc/ffmpeg --incdir=/usr/include/ffmpeg --libdir=/usr/lib64 --mandir=/usr/share/man --arch=x86_64 --optflags='-O2 -flto=auto -ffat-lto-objects -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection' --extra-ldflags='-Wl,-z,relro -Wl,--as-needed -Wl,-z,now -specs=/usr/lib/rpm/redhat/redhat-hardened-ld ' --extra-cflags=' -I/usr/include/rav1e' --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libvo-amrwbenc --enable-version3 --enable-bzlib --disable-crystalhd --enable-fontconfig --enable-frei0r --enable-gcrypt --enable-gnutls --enable-ladspa --enable-libaom --enable-libdav1d --enable-libass --enable-libbluray --enable-libcdio --enable-libdrm --enable-libjack --enable-libfreetype --enable-libfribidi --enable-libgsm --enable-liblensfun --enable-libmp3lame --enable-libmysofa --enable-nvenc --enable-openal --enable-opencl --enable-opengl --enable-libopenjpeg --enable-libopenmpt --enable-libopus --enable-libpulse --enable-librsvg --enable-librav1e --enable-libsmbclient --enable-version3 --enable-libsoxr --enable-libspeex --enable-libssh --enable-libtheora --enable-libvorbis --enable-libv4l2 --enable-libvidstab --enable-libvmaf --enable-version3 --enable-vapoursynth --enable-libvpx --enable-vulkan --enable-libglslang --enable-libx264 --enable-libx265 --enable-libxvid --enable-libxml2 --enable-libzimg --enable-libzvbi --enable-lv2 --enable-avfilter --enable-avresample --enable-libmodplug --enable-postproc --enable-pthreads --disable-static --enable-shared --enable-gpl --disable-debug --disable-stripping --shlibdir=/usr/lib64 --enable-lto --enable-libmfx --enable-runtime-cpudetect\n",
-      "  libavutil      56. 51.100 / 56. 51.100\n",
-      "  libavcodec     58. 91.100 / 58. 91.100\n",
-      "  libavformat    58. 45.100 / 58. 45.100\n",
-      "  libavdevice    58. 10.100 / 58. 10.100\n",
-      "  libavfilter     7. 85.100 /  7. 85.100\n",
-      "  libavresample   4.  0.  0 /  4.  0.  0\n",
-      "  libswscale      5.  7.100 /  5.  7.100\n",
-      "  libswresample   3.  7.100 /  3.  7.100\n",
-      "  libpostproc    55.  7.100 / 55.  7.100\n",
-      "Input #0, image2, from '../videos/substemp_tot2_mon_%04d.png':\n",
-      "  Duration: 00:01:00.00, start: 0.000000, bitrate: N/A\n",
-      "    Stream #0:0: Video: png, rgba(pc), 1500x750 [SAR 5906:5906 DAR 2:1], 9.75 fps, 9.77 tbr, 9.77 tbn, 9.77 tbc\n",
-      "Stream mapping:\n",
-      "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
-      "Press [q] to stop, [?] for help\n",
-      "[libx264 @ 0x559b342e90c0] using SAR=1/1\n",
-      "[libx264 @ 0x559b342e90c0] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "[libx264 @ 0x559b342e90c0] profile High, level 3.2, 4:2:0, 8-bit\n",
-      "[libx264 @ 0x559b342e90c0] 264 - core 160 r3011 cde9a93 - H.264/MPEG-4 AVC codec - Copyleft 2003-2020 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=9 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=25.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
-      "Output #0, mp4, to '../videos/substemp_tot2_mon.mp4':\n",
-      "  Metadata:\n",
-      "    encoder         : Lavf58.45.100\n",
-      "    Stream #0:0: Video: h264 (libx264) (avc1 / 0x31637661), yuv420p, 1500x750 [SAR 1:1 DAR 2:1], q=-1--1, 9.77 fps, 18752 tbn, 9.77 tbc\n",
-      "    Metadata:\n",
-      "      encoder         : Lavc58.91.100 libx264\n",
-      "    Side data:\n",
-      "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A\n",
-      "frame=  586 fps=204 q=-1.0 Lsize=    2645kB time=00:00:59.69 bitrate= 363.0kbits/s speed=20.8x    \n",
-      "video:2638kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.293234%\n",
-      "[libx264 @ 0x559b342e90c0] frame I:3     Avg QP:16.37  size: 67227\n",
-      "[libx264 @ 0x559b342e90c0] frame P:148   Avg QP:21.88  size:  9406\n",
-      "[libx264 @ 0x559b342e90c0] frame B:435   Avg QP:26.49  size:  2544\n",
-      "[libx264 @ 0x559b342e90c0] consecutive B-frames:  0.9%  0.3%  0.5% 98.3%\n",
-      "[libx264 @ 0x559b342e90c0] mb I  I16..4: 24.6% 56.1% 19.3%\n",
-      "[libx264 @ 0x559b342e90c0] mb P  I16..4:  0.4%  2.4%  0.5%  P16..4:  9.6%  4.5%  2.4%  0.0%  0.0%    skip:80.3%\n",
-      "[libx264 @ 0x559b342e90c0] mb B  I16..4:  0.1%  0.4%  0.0%  B16..8:  6.8%  1.4%  0.6%  direct: 1.4%  skip:89.3%  L0:45.4% L1:46.3% BI: 8.3%\n",
-      "[libx264 @ 0x559b342e90c0] 8x8 transform intra:69.2% inter:76.2%\n",
-      "[libx264 @ 0x559b342e90c0] coded y,uvDC,uvAC intra: 37.0% 43.9% 23.4% inter: 4.5% 3.4% 0.7%\n",
-      "[libx264 @ 0x559b342e90c0] i16 v,h,dc,p: 45% 23% 10% 23%\n",
-      "[libx264 @ 0x559b342e90c0] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 20% 10% 38%  4%  6%  7%  6%  4%  4%\n",
-      "[libx264 @ 0x559b342e90c0] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 30% 15% 19%  5%  7%  8%  6%  6%  4%\n",
-      "[libx264 @ 0x559b342e90c0] i8c dc,h,v,p: 63% 13% 13% 11%\n",
-      "[libx264 @ 0x559b342e90c0] Weighted P-Frames: Y:0.0% UV:0.0%\n",
-      "[libx264 @ 0x559b342e90c0] ref P L0: 57.2% 11.1% 17.6% 14.1%\n",
-      "[libx264 @ 0x559b342e90c0] ref B L0: 82.3% 13.3%  4.5%\n",
-      "[libx264 @ 0x559b342e90c0] ref B L1: 96.2%  3.8%\n",
-      "[libx264 @ 0x559b342e90c0] kb/s:360.03\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Make video and delete frames\n",
     "os.system(f'ffmpeg -y -r {framerate} -f image2 -s 1920x1080 -i ../videos/{prefix}_%04d.png -vcodec libx264 -crf 25  -pix_fmt yuv420p ../videos/{prefix}.mp4')\n",
